--- a/src/style.css
+++ b/src/style.css
@@ -10,8 +10,9 @@ body {
 
 main {
   position: relative;
-  margin: 20px auto;
+  margin: 40px auto;
   width: 90%;
+  max-width: 700px;
   height: 700px;
   background: #F5F7FB;
 }
